--- a/views/index.erb
+++ b/views/index.erb
@@ -5,5 +5,13 @@
   </head>
   <body>
     <h1>This is the sign up page.</h1>
+    <!-- DB/ZH 6/11 - added user form below -->
+    <form action="/users" method="post">
+      <input id="email" type="email" name="email" placeholder="Email"/><br><br>
+      <input id="password" type="password" name="password" placeholder="Password"/><br><br>
+      <input id="password2" type="password" name="password confirmation" placeholder="Password Confirmation"/><br><br>
+      <input type="submit" value="Sign Up" />
+    </form>
+    <!-- DB/ZH 6/11 - added user form above -->
   </body>
 </html>
