added sign in page

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,9 @@
     <title>Sign in page</title>
   </head>
   <body>
-    <h1>This is the sign up page.</h1>
+    <!-- added sign in link for those who already have an account -->
+    <a href="/sign_in">Log In</a>
+    <h1>Sign up to Makers BnB</h1>
     <!-- DB/ZH 6/11 - added user form below -->
     <form action="/users" method="post">
       <input id="email" type="email" name="email" placeholder="Email"/><br><br>
