--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -4,6 +4,13 @@
     <title>Sign in page</title>
   </head>
   <body>
-    <h1>this is our sign in page</h1>
+    <a href="/">Sign Up</a>
+    <h1>Log in to Makers BnB</h1>
+    <form action="/signin" method="post">
+      <input id="email" type="email" name="email" placeholder="Email"/><br><br>
+      <input id="password" type="password" name="password" placeholder="Password"/><br><br>
+      <input type="submit" value="Sign Up" />
+    </form>
+
   </body>
 </html>
