Interface calls to API created for user and space

--- a/views/add_space.erb
+++ b/views/add_space.erb
@@ -13,7 +13,7 @@
         <label for="price_per_night"></label><input type="text" name="price_per_night" id="price_per_night" placeholder="Price per night" />
         <label for="available_from"></label><input type="text" name="available_from" id="available_from" placeholder="DD/MM/YYYY" />
         <label for="available_to"></label><input type="text" name="available_to" id="available_to" placeholder="DD/MM/YYYY" />
-        <button type="submit" name="listing_submit" id="listing_submit" value="List my space">List my space</button>
+        <button type="button" name="listing_submit" id="listing_submit" value="List my space">List my space</button>
         </form>
     </body>
 </html>
