Interfaces tidy up

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,11 @@
   <head>
     <!-- Sundar changed the title below from Sign in Page to Sign Up Page -->
     <title>Sign Up Page</title>
-     <script src="src/User.js"> </script>
-     <script src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
+    <script src="/js/interface.js"> </script>
+     <script src="/js/User.js"> </script>
+
+
 
   </head>
   <body>
