--- a/views/add_space.erb
+++ b/views/add_space.erb
@@ -1,6 +1,8 @@
 <html>
 <head>
-
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
+  <script src="/js/interface.js"> </script>
+   <script src="/js/spaces.js"> </script>
   </head>
   <body>
     <h1>List a space</h1>
