listing page created - html only with minor jquery

--- a/views/add_space.erb
+++ b/views/add_space.erb
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>List a space | Murphy BnB</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
   <script src="/js/interface.js"> </script>
    <script src="/js/spaces.js"> </script>
