--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Sundar changed the title below from Sign in Page to Sign Up Page -->
-    <title>Sign Up Page</title>
+    <title>Sign Up Page | Murphy BnB</title>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
     <script src="/js/interface.js"> </script>
      <script src="/js/User.js"> </script>
