--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign in page</title>
+    <title>Sign in page | Murphy BnB</title>
   </head>
   <body>
-    <a href="/">Sign Up</a>
-    <h1>Log in to Makers BnB</h1>
-    <form action="/signin" method="post">
-      <input id="email" type="email" name="email" placeholder="Email"/><br><br>
-      <input id="password" type="password" name="password" placeholder="Password"/><br><br>
-      <input type="submit" value="Sign Up" />
-    </form>
-
+    <h1>this is our sign in page</h1>
   </body>
 </html>
